# mandlebrot

./: README.md  mandlebrot.cabal  mandlebrot.hs
