Name:               mandlebrot
Version:            0.0.0
License:            BSD3
License-File:       LICENSE
Author:             Brian Robertson <raposa@msscripting.com>
Maintainer:         Brian Robertson <raposa@msscripting.com>
Category:           Maths
Stability:          experimental
Tested-With:        GHC==7.6.3
Build-Type:         Simple
Cabal-Version:      >=1.18.0.2
data-files:			LICENSE

Library
  exposed-modules:  
  buildable:        False
  ghc-options: -O2
  build-depends:    base >= 4 && <= 5,
                    complex-generic,
                    JuicyPixels,
                    array,
                    parallel
                    
Executable mandlebrot
  Main-is:          mandlebrot.hs
  ghc-options: -O2 -threaded
  default-language: Haskell2010
  Build-Depends:    base >= 4 && <= 5,
                    complex-generic,
                    JuicyPixels,
                    array,
                    parallel
                    

